# como_pybind

./: CMakeLists.txt  LICENSE  README.en.md  README.md  setup.py
docs/从C++到Python/: 系统开发团队知识结构----从C++到python.pptx  系统开发需要的知识结构.xmind
pybind11/include/pybind11/: pybind11.h
src/: LAMBDA_FOR_METHOD.inc  como_bridge.cpp  como_bridge.h  como_pybind.cpp  como_pytypes.h  py_test.cpp  utils.cpp  utils.h
tests/: como_pybind_basictest.py  test.py  testBreakSignature.cpp
